[project]
name = "bodyloop-util"
version = "0.1.0"
description = "BodyLoop Utilities"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.16.0",
    "bodyloop-sdk>=2026.4.13.2",
    "dash>=3.0.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "trimesh>=4.5.0",
]

[project.scripts]
bodyloop-util = "bodyloop_util.cli:main"

[tool.uv]
package = true
